--- a/index.html
+++ b/index.html
@@ -10,7 +10,21 @@
 
 <body>
     <div class="container">
-        <h1>hello</h1>
+        <textarea id="textarea" rows="10" placeholder="Type here..."></textarea>
+        <div class="controls">
+            <button id="startButton">Start</button>
+            <button id="stopButton" disabled>Stop</button>
+            <button id="replayButton" disabled>Replay</button>
+            <button id="pauseButton" disabled>Pause</button>
+            <select id="speedControl">
+                <option value="0.5">0.5x Speed</option>
+                <option value="1">1x Speed</option>
+                <option value="2">2x Speed</option>
+            </select>
+            <button id="saveButton">Save</button>
+            <button id="loadButton">Load</button>
+            <button id="themeButton">Toggle Dark Mode</button>
+        </div>
     </div>
     <script src="index.js"></script>
 </body>
